--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,15 @@ body{
     margin: 0 auto;
 }
 header {
+    position: fixed;
+    top: 0px;
     width: 100%;
     height: 80px;
     background-color: white;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2em;
+    z-index: 10;
 }            
 #headerh1 {
     position: absolute;
@@ -32,10 +35,16 @@ header {
     display: inline-block;
     text-decoration: none;
     font-size: 17px;
-}            
-#imgyuwen {
-    float: left; margin-right: 20px;
 }
+main {
+    background-color: white;
+    width: 960px;
+    padding: 25px;
+    margin: 0 auto;
+    margin-top: 120px;
+    margin-bottom: 2em;
+}         
+
 h2 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
     color: #ed9b9b;
@@ -45,12 +54,8 @@ h2 {
     border-bottom-style: solid;
     margin-bottom: 1em;
 }
-main {
-    background-color: white;
-    width: 1024px;
-    padding: 25px;
-    margin: 0 auto;
-    margin-bottom: 2em;
+#imgyuwen {
+    float: left; margin-right: 20px;
 }
 footer {
     width: 100%;
@@ -113,51 +118,35 @@ p {
 
 #aboutpage:hover, #ptfpage:hover, #contactpage:hover {
     background-color: pink;
-    }  
-.container {
+} 
+/* Grid styles -------------------------------------------------*/
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    /* grid-gap: 30px; */
+}
+
+.cards {
+    max-width: 960px;
+    margin: 0 auto 30px;
+}
+  
+article {
     position: relative;
 }
-#prtimg1, #prtimg2, #prtimg3, #prtimg4, #prtimg5 {
-    width: 340px;
-    height: auto;
-    opacity: 1;
-    filter: alpha(opacity=50); 
-    margin-left: auto;
-    margin-right: auto;
-    box-sizing: border-box;
+  
+.article-img {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
 }
-
-#text1, #text2, #text3, #text4, #text5  {
+  
+.article-title {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-    color: black;
-    visibility:hidden;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
-}
-
-#prtimg1:hover, #prtimg2:hover, #prtimg3:hover, #prtimg4:hover, #prtimg5:hover {
-    opacity: 0.3;
-    filter: alpha(opacity=50); 
-}
-.container:hover #text1 {
-    visibility:visible;
-}
-.container:hover #text2 {
-    visibility:visible;
-}
-.container:hover #text3 {
-    visibility:visible;
-}
-.container:hover #text4 {
-    visibility:visible;
-}
-.container:hover #text5 {
-    visibility:visible;
+    bottom: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.4);
 }
 
 .topnav .icon {
@@ -166,54 +155,50 @@ p {
 
 #headerh1_hidden {
     display: none;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 80px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: #ed9b9b;
+    color: #ffffff;
+    padding: 20px 20px 20px 10px;
+    box-sizing: border-box;
+    text-align: center;
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 1024px) {    
-    body {
-        width: 1024px;
-    }
     main {
-        width: 960px;
+        width: 100%;
     }
-    #prtimg1, #prtimg2, #prtimg3, #prtimg4, #prtimg5 {
-        width: 320px;
-    }
+}
 @media screen and (max-width: 980px) {   
-    body {
-        width: 980px;
-    } 
-        main {
-            width: 900px;
-        }
-        #prtimg1, #prtimg2, #prtimg3, #prtimg4, #prtimg5 {
-            width: 300px;
+    main {
+            width: 100%;
+    }
 }
 @media screen and (max-width: 768px) {    
-    body {
-        width: 768px;
-    }
     main {
-        width: 600px;
+        width: 100%;
     }
-    .column {
-        flex: 50%;
-  }
-  #prtimg1, #prtimg2, #prtimg3, #prtimg4, #prtimg5 {
-    width: 300px;
 }
 
 @media screen and (max-width: 640px) {
-    body {
-        width: 640px;
-    }
     main {
-        width: 375px;
+        width: 100%;
+        margin-top: 30px;
     }
-    .column {
-        flex-direction: column;
+    header {
+        position: relative;
+    }
+    #imgyuwen {
+    float: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     }
     .topnav a {display: none;}
-    
     .topnav a.icon {
           float: right;
           display: block;
@@ -222,7 +207,7 @@ p {
 
 @media screen and (max-width: 640px) {
     .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
+    .topnav.responsive a .icon {
       position: absolute;
       right: 0;
       top: 0;
@@ -238,17 +223,5 @@ p {
     }
     #headerh1_hidden {
         display: block;
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        width: 80px;
-        height: 80px;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
-        background-color: #ed9b9b;
-        padding: 20px 10px 20px 10px;
-        color: #ffffff;
-        box-sizing: border-box;
-        text-align: center;
-        margin: 0 auto;
     }
 }
