--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,8 @@ h2 {
     float: left; margin-right: 20px;
 }
 footer {
+    position: fixed;
+    bottom: 0px;
     width: 100%;
     background-color: gray;
     color: white;
@@ -146,7 +148,7 @@ article {
     bottom: 0;
     width: 100%;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 .topnav .icon {
@@ -190,6 +192,9 @@ article {
         margin-top: 30px;
     }
     header {
+        position: relative;
+    }
+    footer {
         position: relative;
     }
     #imgyuwen {
