--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,10 @@ h2 {
     margin-bottom: 1em;
 }
 #imgyuwen {
-    float: left; margin-right: 20px;
+    float: left; 
+    margin-right: 20px;
+    width: 200px;
+    height: auto;
 }
 footer {
     width: 100%;
@@ -94,6 +97,7 @@ p {
     border-color:lightgray;
     border-width: 1px;
     padding: 3px 0px 3px 6px;
+    width: 100%;
 }
 
 #fillarea{
@@ -102,6 +106,7 @@ p {
     border-color:lightgray;
     border-width: 1px;
     margin-bottom: 16px;
+    width: 100%;
 }
 
 #submit {
@@ -133,6 +138,7 @@ p {
   
 article {
     position: relative;
+    padding: 10px;
 }
   
 .article-img {
@@ -146,7 +152,8 @@ article {
     bottom: 0;
     width: 100%;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(237, 155, 155, 0.4);
+    text-align: center;
 }
 
 .topnav .icon {
@@ -197,6 +204,8 @@ article {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
+    height: auto;
     }
     .topnav a {display: none;}
     .topnav a.icon {
