--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ header {
     color: #777777;
     text-align: center;
     padding: 28px 16px;
-    display: inline-block;
+    display: block;
     text-decoration: none;
     font-size: 17px;
     font-family: 'Lato', sans-serif;
