--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body{
-    background-color: ivory;
-    margin: 0 auto;
+    line-height: 1;
 }
+/* header */
 header {
     position: fixed;
     top: 0px;
@@ -10,77 +10,234 @@ header {
     background-color: white;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 0.5em;
     margin-bottom: 2em;
     z-index: 10;
-}            
-#headerh1 {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 240px;
-    height: 80px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
-    background-color: #ed9b9b;
-    color: #ffffff;
-    padding: 20px 20px 20px 20px;
-    box-sizing: border-box;
-    text-align: center;
-    margin: 0 auto;
-}
-.topnav a {
-    float: right;
-    color: #777777;
-    text-align: center;
-    padding: 28px 16px;
+}        
+    /* logo     */
+    #logo {
+        position: absolute;
+        top: 1em;
+        left: 1.5em;
+        height: 50px;
+        box-sizing: border-box;
+        margin: 0 auto;
+    }
+
+    /* nav bar */
+    .topnav {
+        float: right;
+        margin-right: 1em;
+        display: block;
+    }
+    
+    #aboutpage, #ptfpage, #resume  {
+        float: right;
+        color: #777777;
+        text-align: center;
+        margin: 28px 16px;
+        display: block;
+        text-decoration: none;
+        font-size: 17px;
+        font-family: 'Roboto', sans-serif;
+    }
+    .topnav .icon {
+        display: none;
+    }
+    #resume{
+        border: 1px solid #777777;
+        border-radius: 20px;
+        padding: 5px;
+        margin: 22px 16px;
+    }
+    #resume:hover{
+        color:white;
+        background-color:#777777;
+    }
+
+    #aboutpage:hover, #ptfpage:hover {
+        color: #ed9b9b
+    } 
+    .active_link {
+        color: #DB696A !important;
+    }
+
+
+/* leading */
+.leading {
     display: block;
-    text-decoration: none;
-    font-size: 17px;
-    font-family: 'Lato', sans-serif;
+    margin: 0 auto 30px;
+    max-width: 1040px;
+    height: 240px;
+    margin-top: 100px;
+    padding: 30px;
+    background-size: cover;
 }
-main {
-    background-color: white;
-    width: 960px;
-    padding: 25px;
-    margin: 0 auto;
-    margin-top: 120px;
-    margin-bottom: 7em;
-}         
 
-h2 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
-    color: #ed9b9b;
-    padding: 0em 0em 25px 0em;
-    border-bottom-width: 2px;
-    border-bottom-color: lightgray;
-    border-bottom-style: solid;
-    margin-bottom: 1em;
+.leading-bigtext {
+    color: black;
+    font-weight: bold;
+    font-size: 90pt;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bolder;
 }
-#imgyuwen {
-    float: left; 
-    margin-right: 20px;
-    width: 200px;
-    height: auto;
+
+.leading-text {
+    font-size: 50pt;
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 15px;
 }
-footer {
-    position: fixed;
-    bottom: 0px;
+
+@media (max-width: 1100px) {
+    .leading-bigtext {
+        font-size: 55pt;
+    }
+    .leading-text {
+        font-size: 42pt;
+    }
+}
+
+@media (max-width: 640px) {
+    .leading-bigtext {
+        font-size: 42pt;
+    }
+    .leading-text{
+    font-size: 31pt;
+    }
+}
+
+@media (max-width: 370px) {
+    .leading-bigtext {
+        font-size: 31pt;
+    }
+    .leading-text{
+        font-size: 24pt;
+    }
+}
+
+/* card grids for portfolio*/
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-gap: 30px;
+    max-width: 1040px;
+    margin: 0 auto 30px;
+    margin-top: 20px;
+
+} 
+
+article {
+    position: relative;
+}
+.cardcontainer {
+    position: relative;
+  }
+  
+.article-img {
+    height: 400px;
     width: 100%;
-    background-color: gray;
-    color: white;
-    text-align: center;
-    font-size: 10pt;
-    padding: 20px;
-    border-top-width: 8px;
-    border-top-color: #ed9b9b;
-    border-top-style: solid;
-}
-p {
-    color: gray;
-    font-family: 'Roboto', sans-serif;
+    object-fit: cover;
 }
 
-input {
+.article-title {
+    color: white;
     font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+.article-subtitle {
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    z-index:2;
+}
+
+#img1 {
+    background-color: #0088CA;
+}
+#img2 {
+    background-color: #270A74;
+}
+#img3 {
+    background-color: #820210;
+}
+#img4 {
+    background-color: #E2AB09;
+}
+#img5 {
+    background-color: #1F263A;
+}
+  
+.cardcontainer:hover .overlay {
+    opacity: 1;
+}
+
+/* social media icon */
+.fa {
+    margin-top: 15px;
+    padding: 10px;
+    height: 50px;
+  }
+
+  /* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.7;
+}
+
+
+/* text for about */
+.text {
+    max-width: 1040px;
+    margin: 0 auto 30px;
+    margin-top: 20px;
+} 
+
+.textcontainer {
+    color: #4A4A4A;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 17pt;
+    line-height: 26pt;
+    margin-top: 60px;
+}
+
+@media (max-width: 1100px) {
+    .textcontainer {
+        padding-left: 1.5em;
+        padding-right: 1.5em;
+
+    }
+}
+
+h5{
+    font-size: 24pt;
+    margin-bottom: 0.5em;
+}
+input {
+    font-family: 'Open Sans', sans-serif;
     color: gray;
 }
 
@@ -126,69 +283,9 @@ input {
     padding: 3px 0px 3px 0px;
     text-align: center;
 }
-.active_link {
-    background-color: #ed9b9b !important;
-    color: white !important;
-}
 
-#aboutpage:hover, #ptfpage:hover, #contactpage:hover {
-    background-color: pink;
-} 
-/* Grid styles -------------------------------------------------*/
-.cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    /* grid-gap: 30px; */
-}
 
-.cards {
-    max-width: 960px;
-    margin: 0 auto 30px;
-}
   
-article {
-    position: relative;
-    padding: 10px;
-}
-  
-.article-img {
-    display: block;
-    height: 200px;
-    width: 100%;
-    object-fit: cover;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-  
-.article-title {
-    bottom: 0;
-    padding: 10px;
-    background-color: rgba(237, 155, 155, 0.8);
-    text-align: center;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-}
-
-.topnav .icon {
-    display: none;
-  }
-
-#headerh1_hidden {
-    display: none;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    height: 80px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: #ed9b9b;
-    color: #ffffff;
-    padding: 20px 20px 20px 10px;
-    box-sizing: border-box;
-    text-align: center;
-    margin: 0 auto;
-}
-
 @media screen and (max-width: 1024px) {    
     main {
         width: 100%;
