--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@ header {
     background-color: white;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0.5em;
     margin-bottom: 2em;
     z-index: 10;
 }        
@@ -163,6 +162,16 @@ article {
     transform: translate(-50%, -50%);
     text-align: center;
 }
+.code {
+    position: absolute;
+    bottom: 1em;
+    left: 1em;
+    height: 30px;
+    opacity: 0;
+    transition: .5s ease;
+    z-index: 5;
+}
+
 .overlay {
     position: absolute;
     top: 0;
@@ -192,7 +201,11 @@ article {
     background-color: #1F263A;
 }
   
-.cardcontainer:hover .overlay {
+.cardcontainer:hover .overlay{
+    opacity: 1;
+}
+
+article:hover .code {
     opacity: 1;
 }
 
