--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,13 +201,16 @@ article {
     background-color: #1F263A;
 }
 #img6 {
-    background-color: #7D8389;
+    background-color: #F8E4B0;
 }
 #img7 {
     background-color: #00AE62
 }
 #img8 {
     background-color: #FF9400
+}
+#img9 {
+    background-color: #E1E1E1
 }
   
   
