--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,6 +212,9 @@ article {
 #img9 {
     background-color: #E1E1E1
 }
+#img10 {
+    background-color: #FFCDD3
+}
   
   
 .cardcontainer:hover .overlay{
