--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,9 @@ article {
 #img11 {
     background-color: #86B41A
 }
-  
+#img12{
+    background-color: #386F9C
+}
 
 .cardcontainer:hover .overlay{
     opacity: 1;
