--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,53 +13,59 @@ header {
     margin-bottom: 2em;
     z-index: 10;
 }        
-    /* logo     */
-    #logo {
-        position: absolute;
-        top: 1em;
-        left: 1.5em;
-        height: 50px;
-        box-sizing: border-box;
-        margin: 0 auto;
-    }
 
-    /* nav bar */
-    .topnav {
-        float: right;
-        margin-right: 1em;
-        display: block;
-    }
-    
-    #aboutpage, #ptfpage, #resume  {
-        float: right;
-        color: #777777;
-        text-align: center;
-        margin: 28px 16px;
-        display: block;
-        text-decoration: none;
-        font-size: 17px;
-        font-family: 'Roboto', sans-serif;
-    }
-    .topnav .icon {
-        display: none;
-    }
-    #resume{
-        border: 1px solid #777777;
-        border-radius: 20px;
-        padding: 5px;
-        margin: 22px 16px;
-    }
-    #resume:hover{
-        color:white;
-        background-color:#777777;
-    }
+main{
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Open Sans', sans-serif;
+}
+/* logo     */
+#logo {
+    position: absolute;
+    top: 1em;
+    left: 1.5em;
+    height: 50px;
+    box-sizing: border-box;
+    margin: 0 auto;
+}
 
-    #aboutpage:hover, #ptfpage:hover {
-        color: #ed9b9b
-    } 
-    .active_link {
-        color: #DB696A !important;
-    }
+/* nav bar */
+.topnav {
+    float: right;
+    margin-right: 1em;
+    display: block;
+}
+
+#aboutpage, #ptfpage, #resume  {
+    float: right;
+    color: #777777;
+    text-align: center;
+    margin: 28px 16px;
+    display: block;
+    text-decoration: none;
+    font-size: 17px;
+    font-family: 'Roboto', sans-serif;
+}
+.topnav .icon {
+    display: none;
+}
+#resume{
+    border: 1px solid #777777;
+    border-radius: 20px;
+    padding: 5px;
+    margin: 22px 16px;
+}
+#resume:hover{
+    color:white;
+    background-color:#777777;
+}
+
+#aboutpage:hover, #ptfpage:hover {
+    color: #ed9b9b
+} 
+.active_link {
+    color: #DB696A !important;
+}
 
 
 /* leading */
@@ -76,7 +82,7 @@ header {
 .leading-bigtext {
     color: black;
     font-weight: bold;
-    font-size: 90pt;
+    font-size: 6vw;
     font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
 }
@@ -116,12 +122,14 @@ header {
 
 /* card grids for portfolio*/
 .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    display: none;
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
     grid-gap: 30px;
     max-width: 1040px;
     margin: 0 auto 30px;
     margin-top: 20px;
+    opacity: 0;
+    transition: opacity 1s linear;
 
 } 
 
@@ -133,7 +141,7 @@ article {
   }
   
 .article-img {
-    height: 400px;
+    height: 370px;
     width: 100%;
     object-fit: cover;
 }
@@ -141,32 +149,20 @@ article {
 .article-title {
     color: white;
     font-family: 'Roboto', sans-serif;
-    font-size: 24px;
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     text-align: center;
 }
-.article-subtitle {
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
+
 .code {
     position: absolute;
     bottom: 1em;
     left: 1em;
-    height: 30px;
+    height: 20px;
     opacity: 0;
     transition: .5s ease;
     z-index: 5;
@@ -186,40 +182,43 @@ article {
 }
 
 #img1 {
-    background-color: #0088CA;
+    background-color: #F8E4B0;
 }
-#img2 {
+/* #img2 {
     background-color: #270A74;
-}
+} */
 #img3 {
     background-color: #820210;
 }
-#img4 {
+/* #img4 {
     background-color: #E2AB09;
-}
+} */
 #img5 {
     background-color: #1F263A;
 }
-#img6 {
+/* #img6 {
     background-color: #F8E4B0;
-}
-#img7 {
+} */
+/* #img7 {
     background-color: #00AE62
-}
+} */
 #img8 {
     background-color: #FF9400
 }
 #img9 {
     background-color: #E1E1E1
 }
-#img10 {
+/* #img10 {
     background-color: #FFCDD3
-}
+} */
 #img11 {
     background-color: #86B41A
 }
 #img12{
     background-color: #386F9C
+}
+#img13{
+    background-color: black
 }
 
 .cardcontainer:hover .overlay{
@@ -258,127 +257,67 @@ article:hover .code {
     margin-top: 60px;
 }
 
-@media (max-width: 1100px) {
-    .textcontainer {
-        padding-left: 1.5em;
-        padding-right: 1.5em;
 
-    }
+h4{
+    font-size: 24pt;
+    margin-bottom: 1em;
 }
 
 h5{
-    font-size: 24pt;
-    margin-bottom: 0.5em;
-}
-input {
-    font-family: 'Open Sans', sans-serif;
-    color: gray;
+    font-size: 24px;
+    margin-bottom: 1em;
 }
 
-#contactp {
-    color: gray;
-    margin: 0px 0px 8px 0px;
-}
-.row {
-    display: flex;
-    flex-wrap: wrap;
-}
-.column {
-    flex: 33.33%;
 
-}
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-#name, #email {
-    border-style: solid;
-    border-color:lightgray;
-    border-width: 1px;
-    padding: 3px 0px 3px 6px;
-    width: 100%;
+h6{
+    font-size: 14px;
+    margin-bottom: 1em;
+    font-weight: 200
 }
 
-#fillarea{
-    height: 150px;
-    border-style: solid;
-    border-color:lightgray;
-    border-width: 1px;
-    margin-bottom: 16px;
-    width: 100%;
+/* tabs */
+hr {
+    height: .25rem;
+    width: 29%;
+    margin: 0;
+    margin-left: 11%;
+    background: tomato;
+    border: none;
+    transition: .3s ease-in-out;
+}
+/* 
+#designer:hover ~ hr {
+    width: 29%;
+    margin-left: 11%;
 }
 
-#submit {
-    background-color: #ed9b9b;
-    color: white;
-    width: 90px;
-    padding: 3px 0px 3px 0px;
+
+#developer:hover ~ hr {
+    width: 31%;
+    margin-left: 48%;
+} */
+
+ul li {
+    display: inline;
     text-align: center;
+  }
+
+#designer.active_tab ~ hr {
+    width: 29%;
+    margin-left: 11%;
 }
 
 
-  
-@media screen and (max-width: 1024px) {    
-    main {
-        width: 100%;
-    }
-}
-@media screen and (max-width: 980px) {   
-    main {
-            width: 100%;
-    }
-}
-@media screen and (max-width: 768px) {    
-    main {
-        width: 100%;
-    }
+#developer.active_tab ~ hr{
+    width: 32%;
+    margin-left: 48%;
 }
 
-@media screen and (max-width: 640px) {
-    main {
-        width: 100%;
-        margin-top: 30px;
-    }
-    header {
-        position: relative;
-    }
-    footer {
-        position: relative;
-    }
-    #imgyuwen {
-    float: none;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    height: auto;
-    }
-    .topnav a {display: none;}
-    .topnav a.icon {
-          float: right;
-          display: block;
-    }    
+.show{
+    display: grid;
+    opacity: 1
 }
 
-@media screen and (max-width: 640px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: center;
-      background-color: white;
-    }
-    #headerh1 {
-        display: none;
-    }
-    #headerh1_hidden {
-        display: block;
-    }
-}
+
+
+
